# purrr

./: .envrc  .gitignore  .pre-commit-config.yaml  .purrr.toml  README.md  Taskfile.dist.yaml  docker-compose.yml  pre-commit-config.yaml  pyproject.toml
.github/workflows/: testing.yml
src/precis/: pre_commit.py  pytest.py
src/purrr/: __init__.py  base.py  client.py  deployments.py  flows.py  purrr.tcss  runs.py  settings.py  tui.py  workspaces.py
src/purrr/client/: __init__.py  deployments.py  logs.py  main.py  runs.py
src/purrr/screens/: base.py  deployments.py  flows.py  runs.py  workspaces.py
tests/: conftest.py  run_ci.py  seed_server.py  test_client.py
tests/app/: test_app.py
tests/client/: test_client.py  test_deployments.py  test_log_execution.py  test_logs.py  test_runs.py
tests/fixtures/: seed_server.py
tests/fixtures/flows/: github_stars.py
