[project]
name = "purrr"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sam Phinizy", email = "nipper@dorkery.com" }
]
dependencies = [
    "pydantic>=2.9.2",
    "textual>=0.81.0",
    "duckdb>=1.1.1",
    "sqlitedict>=2.1.0",
    "prefect>=3.0.8",
    "ipykernel>=6.29.5",
    "pydantic-settings>=2.0.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
purrr = "purrr:entrypoint"

[tool.uv]
managed = true
dev-dependencies = [
    "textual-dev>=1.6.1",
    "prefect[shell]>=3.0.8",
    "pytest>=8.3.3",
    "ruff>=0.7.2",
    "pytest-asyncio>=0.24.0",
    "vcrpy>=6.0.2",
    "pytest-vcr>=1.0.2",
    "anyio>=4.6.2.post1",
    "pytest-textual-snapshot>=1.0.0",
    "plumbum>=1.9.0",
    "ipykernel>=6.29.5",
    "pyperclip>=1.9.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/purrr"]
